--- a/01/package.json
+++ b/01/package.json
@@ -15,5 +15,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1"
+  },
+  "dependencies": {
+    "read-file-async": "^1.0.0"
   }
 }
